--- a/3. Python Intermediate/Intermediate - Functions and OOPS.ipynb
+++ b/3. Python Intermediate/Intermediate - Functions and OOPS.ipynb
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f436a594",
    "metadata": {},
    "outputs": [],
@@ -483,12 +483,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a0440221",
    "metadata": {},
    "outputs": [],
    "source": [
     "def square(num): return num**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fce60220-f419-44d3-816f-535001ffca02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square(2)"
    ]
   },
   {
@@ -539,7 +560,7 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "9"
       ]
      },
      "execution_count": 9,
@@ -548,9 +569,9 @@
     }
    ],
    "source": [
-    "square_lambda = lambda num: num**2\n",
+    "square_lambda = lambda num=2: num**2\n",
     "\n",
-    "square_lambda(2)"
+    "square_lambda(3)"
    ]
   },
   {
@@ -612,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "2fdf9063",
    "metadata": {},
    "outputs": [],
@@ -622,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "d4b33e81",
    "metadata": {},
    "outputs": [
@@ -632,7 +653,7 @@
        "'MY NAME IS DARSHIL'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "id": "a8b60878",
    "metadata": {},
    "outputs": [
@@ -681,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "4aa1f1b8",
    "metadata": {},
    "outputs": [
@@ -756,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "a03dd2dc",
    "metadata": {},
    "outputs": [],
@@ -789,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "64a60e1e",
    "metadata": {},
    "outputs": [
@@ -799,7 +820,7 @@
        "'Lab'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "id": "90caa091",
    "metadata": {},
    "outputs": [
@@ -820,7 +841,7 @@
        "'Huskie'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "5061f765",
    "metadata": {},
    "outputs": [],
@@ -889,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "id": "a8cbc670",
    "metadata": {},
    "outputs": [],
@@ -899,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "ce59cee2",
    "metadata": {},
    "outputs": [
@@ -909,7 +930,7 @@
        "50.24"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "aee3c86c",
    "metadata": {},
    "outputs": [
@@ -964,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "id": "83a4ae40",
    "metadata": {},
    "outputs": [
@@ -974,7 +995,7 @@
        "1"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +1007,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
+   "id": "00ef19b5-b095-4eff-8307-91d62a24470c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.setRadius(2)\n",
+    "c.getRadius()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "c4c06529",
    "metadata": {},
    "outputs": [],
@@ -996,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "id": "8e31612f",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1049,7 @@
        "5"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "id": "af376638",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1070,7 @@
        "78.5"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "5837dd48",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "instance method called <__main__.MyClass object at 0x105eb4fd0>\n",
+      "instance method called <__main__.MyClass object at 0x0000015C83497CD0>\n",
       "class method called <class '__main__.MyClass'>\n",
       "static method called\n"
      ]
@@ -1088,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "id": "bf40d0e5",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1146,7 @@
     "        self.name = name\n",
     "        self.age = age\n",
     "\n",
-    "    # instance variables\n",
+    "    # instance method\n",
     "    def show(self):\n",
     "        print(self.name, self.age, Student.school_name)\n",
     "\n",
@@ -1118,7 +1161,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
+   "id": "10ab7c84-dd8e-4a49-9217-0fb43271b285",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Darshil 25 ABC School\n"
+     ]
+    }
+   ],
+   "source": [
+    "darshil = Student(\"Darshil\", 25)\n",
+    "darshil.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "6d371ea8",
    "metadata": {},
    "outputs": [],
@@ -1128,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "id": "ed9837c8",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "id": "34b688e4",
    "metadata": {},
    "outputs": [],
@@ -1156,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "id": "5c2f66da",
    "metadata": {},
    "outputs": [],
@@ -1166,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "id": "00c3c84a",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1238,7 @@
        "'Darshil'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,17 +1249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "id": "e3fd029b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ABC School'"
+       "'XYZ School'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "id": "392ef6b9",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1280,7 @@
        "['chapter 1', 'chapter 2', 'chapter 3']"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "689287cb",
    "metadata": {},
    "outputs": [
@@ -1258,31 +1320,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jessa 12 ABC School\n"
+      "Jessa 12 XYZ School\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['chapter 1', 'chapter 2', 'chapter 3']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# create object\n",
     "jessa = Student('Jessa', 12)\n",
     "# call instance method\n",
-    "jessa.show()\n",
-    "\n",
+    "jessa.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "29558963-12e1-46ae-87f3-6a41f8d4ce1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jessa 12 XYZ School\n",
+      "Jessa 12 PQR School\n"
+     ]
+    }
+   ],
+   "source": [
     "# call class method using the class\n",
     "Student.change_School('XYZ School')\n",
+    "jessa.show()\n",
     "# call class method using the object\n",
     "jessa.change_School('PQR School')\n",
-    "\n",
+    "jessa.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "fd317924-1f87-4396-bc10-ca2de377df36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['chapter 1', 'chapter 2', 'chapter 3']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# call static method using the class\n",
     "Student.find_notes('Math')\n",
     "# call class method using the object\n",
@@ -1310,11 +1400,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "d47438df",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def square_root(num):\n",
+    "    return num ** (1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "320ee0aa-b585-4b22-be7d-ac0f380a4278",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square_root(4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1330,19 +1444,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "8a8c33d1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def function_tuple(a, b):\n",
+    "    return a + b, a * b"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "774a3a1d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 8)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function_tuple(2, 4)"
+   ]
   }
  ],
  "metadata": {
@@ -1361,7 +1491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
