--- a/4. Python Advance/Numpy Basics.ipynb
+++ b/4. Python Advance/Numpy Basics.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6cfde64f",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "<function numpy.array>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1184acb4",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "array([10, 20, 30])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "id": "04bed9e0-2e09-4e53-859d-b24fa071dab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(np.array(my_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "db86d791",
    "metadata": {},
    "outputs": [
@@ -120,7 +141,7 @@
        "       [35, 40, 45]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "ed564889",
    "metadata": {},
    "outputs": [
@@ -143,7 +164,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7fba5517",
    "metadata": {},
    "outputs": [],
@@ -236,7 +257,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "id": "1245ea97-7ecc-4d0e-947c-d875006233f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2b61fa1f-5954-4645-b071-1672a1a4d0fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int32')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "a68c901a",
    "metadata": {},
    "outputs": [
@@ -246,13 +309,34 @@
        "(3,)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "arr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a5217adc-e755-4da0-9ff2-86c0438fe888",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(arr.shape)"
    ]
   },
   {
@@ -289,7 +373,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "id": "700dee0b-b7c6-405c-8ac0-33492614d7c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(twod_array.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "c4eda0d9",
    "metadata": {},
    "outputs": [
@@ -297,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "int64\n",
+      "int32\n",
       "(3,)\n"
      ]
     }
@@ -309,6 +414,28 @@
     "\n",
     "print(arr.dtype)\n",
     "print(arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fe33119f-e6d9-4b9e-9a32-e471d2855e46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int32\n",
+      "(3,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [10, 20, 30]\n",
+    "ndarr = np.array(lst)\n",
+    "print(ndarr.dtype)\n",
+    "print(ndarr.shape)"
    ]
   },
   {
@@ -331,17 +458,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "28889285",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 3, 6, 9])"
+       "array([0, 2, 4, 6, 8])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +476,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "np.arange(0, 10, 3)"
+    "np.arange(0, 10, 2)"
    ]
   },
   {
@@ -364,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "8aa7839b",
    "metadata": {},
    "outputs": [
@@ -375,7 +502,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "4e3eff79",
    "metadata": {},
    "outputs": [
@@ -397,13 +524,57 @@
        "       [1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.ones((2, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3a2eff0b-1119-4ea5-a0d4-29005b575bd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0],\n",
+       "       [0, 0, 0]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros((2,3), dtype=int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "980dc46d-c8fa-48e4-923b-3fc4ca05472f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((2,5), dtype=int)"
    ]
   },
   {
@@ -424,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "ad881b6a",
    "metadata": {},
    "outputs": [
@@ -435,7 +606,7 @@
        "        8.33333333, 10.        ])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,6 +614,29 @@
    "source": [
     "# divide into 7 interval from 0 to 10\n",
     "np.linspace(0, 10, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "32a99cc6-4194-4619-a701-974fe6b5e7f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.71428571,  1.42857143,  2.14285714,  2.85714286,\n",
+       "        3.57142857,  4.28571429,  5.        ,  5.71428571,  6.42857143,\n",
+       "        7.14285714,  7.85714286,  8.57142857,  9.28571429, 10.        ])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0, 10, 15)"
    ]
   },
   {
@@ -476,19 +670,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "id": "9bf56c2f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.6131258 , 0.23897206, 0.11549765, 0.83423578],\n",
-       "       [0.1604556 , 0.20666809, 0.58085897, 0.30308941],\n",
-       "       [0.23075721, 0.91418951, 0.82369072, 0.86131527]])"
+       "array([[0.55962089, 0.53854744, 0.13993561, 0.65323515],\n",
+       "       [0.47127577, 0.59666261, 0.3894995 , 0.21584826],\n",
+       "       [0.09135213, 0.8721125 , 0.86212303, 0.72295503]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "id": "aaa6144e",
    "metadata": {},
    "outputs": [
@@ -509,8 +703,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.1059393   0.75426369  1.28806142]\n",
-      " [ 0.85788773  0.37334307  0.47490309]]\n"
+      "[[-1.06666582  1.26556437  0.15946266]\n",
+      " [ 0.67349825 -0.04055966 -0.41802622]]\n"
      ]
     }
    ],
@@ -522,17 +716,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "id": "7d11b355",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([30, 10, 19,  7, 33, 38, 31, 21,  9, 14])"
+       "array([ 8, 21, 25, 36, 27,  7,  8, 30, 18, 25])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,20 +739,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "id": "ca70f895",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[17, 23, 19, 26],\n",
-       "       [36, 13, 15, 27],\n",
-       "       [26, 37,  9, 20],\n",
-       "       [41,  9, 16,  0]])"
+       "array([[ 7, 41, 34, 27],\n",
+       "       [ 1, 22, 42, 24],\n",
+       "       [37, 19, 44, 33],\n",
+       "       [ 6, 17, 13, 49]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
