--- a/6. End-To-End Data Pipeline Project/Spotify Data Pipeline Project.ipynb
+++ b/6. End-To-End Data Pipeline Project/Spotify Data Pipeline Project.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "id": "36c80ced",
    "metadata": {},
    "outputs": [],
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "24e06a56",
+   "execution_count": null,
+   "id": "59951983-45ac-45da-ad64-d8f5ce1403ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "#add your keys here\n",
-    "client_credentials_manager = SpotifyClientCredentials(client_id=\"0ec5d63f2cd24e1482fa0e3f44f9d387\", client_secret=\"cd59a407847a4722b831433ae64a053a\")"
+    "client_credentials_manager = SpotifyClientCredentials(client_id=\"\", client_secret=\"\")"
    ]
   },
   {
